--- a/backend/package.json
+++ b/backend/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "mongoose": "^6.2.3"
+  },
+  "scripts": {
+    "server": " nodemon ./src/server.js"
   }
 }
