--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,14 @@
   "name": "frontend",
   "version": "0.1.0",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "firebase": "^9.6.7",
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
     "react-date-picker": "^8.4.0",
