--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,18 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.6.7",
     "axios": "^0.26.0",
+    "firebase": "^9.6.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slideshow-image": "^3.7.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
